// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptsList rendering tests PromptsList - filters displayed - rendered test 1`] = `
<div>
  <div
    class="flex flex-col h-full bg-white"
    data-testid="prompts-list"
  >
    <div
      class="px-6 py-4 border-b border-slate-200/80 flex justify-between items-center bg-gradient-to-r from-white to-slate-50/50 sticky top-0 z-10 backdrop-blur-sm"
      data-testid="prompts-list-header"
    >
      <div
        class="flex items-center gap-3"
      >
        <h3
          class="text-base font-bold text-slate-800 tracking-tight"
        >
          Bibliothek
        </h3>
        <span
          class="text-xs font-medium text-slate-600 bg-slate-100 px-2.5 py-1 rounded-full shadow-sm"
        >
          6
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 relative transition-all duration-200 bg-blue-50 border-blue-300 text-blue-700 hover:bg-blue-100"
          data-slot="button"
          data-testid="filters-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-funnel w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            Filter
          </span>
        </button>
        <a
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 bg-gradient-to-r from-blue-600 to-blue-700 hover:from-blue-700 hover:to-blue-800 text-white shadow-md hover:shadow-lg transition-all duration-200 flex items-center gap-2"
          data-slot="button"
          data-testid="create-prompt-btn"
          href="/prompts/new"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            Neu
          </span>
        </a>
      </div>
    </div>
    <div
      class="px-6 py-4 border-b border-slate-200/80 bg-white animate-in slide-in-from-top-4 duration-200"
      data-testid="prompts-filter"
    >
      <div
        class="flex items-center justify-end mb-4 pb-3 border-b border-slate-200"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 text-slate-600 hover:text-slate-900 hover:bg-slate-100"
          data-slot="button"
          data-testid="reset-btn"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rotate-ccw w-3.5 h-3.5 mr-1.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
            />
            <path
              d="M3 3v5h5"
            />
          </svg>
          <span
            class="text-xs font-medium"
          >
            Zurücksetzen
          </span>
        </button>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="space-y-2"
          data-testid="search-filter"
        >
          <label
            class="text-sm font-semibold text-slate-700 uppercase tracking-wide"
            data-testid="filter-label"
          >
            Suchbegriff
          </label>
          <div
            class="relative"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-4.34-4.34"
              />
              <circle
                cx="11"
                cy="11"
                r="8"
              />
            </svg>
            <input
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 h-9 min-w-0 px-3 outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-full pl-10 pr-4 py-2.5 bg-slate-50/50 border border-slate-200 rounded-lg text-sm text-slate-900 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500/50 focus:border-blue-400 focus:bg-white transition-all shadow-sm"
              data-slot="input"
              data-testid="search-input"
              id="search-prompts"
              placeholder="Nach Titel suchen..."
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="space-y-2"
          data-testid="categories-filter"
        >
          <label
            class="text-xs font-semibold text-slate-700 uppercase tracking-wide"
            data-testid="filter-label"
          >
            Kategorien
          </label>
          <div
            aria-controls="radix-_r_0_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="w-full min-h-[42px] cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 hover:bg-white hover:border-slate-300 px-3 py-2 flex items-center flex-wrap gap-2 transition-all shadow-sm"
            data-slot="popover-trigger"
            data-state="closed"
            data-testid="popover-trigger"
            type="button"
          >
            <span
              class="text-slate-400 text-sm"
              data-testid="no-selected-category"
            >
              Kategorien auswählen...
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 15 5 5 5-5"
              />
              <path
                d="m7 9 5-5 5 5"
              />
            </svg>
          </div>
          <div
            data-testid="mock-react-presence"
          >
            <div
              data-testid="mock-react-portal"
            >
              <div
                data-testid="mock-react-presence"
              >
                <div
                  data-radix-popper-content-wrapper=""
                  style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: -4px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
                >
                  <div
                    class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 origin-(--radix-popover-content-transform-origin) rounded-md border outline-hidden w-72 p-0 shadow-lg border-slate-200"
                    data-align="center"
                    data-side="bottom"
                    data-slot="popover-content"
                    data-state="closed"
                    id="radix-_r_0_"
                    role="dialog"
                    style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
                    tabindex="-1"
                  >
                    <div
                      class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
                      cmdk-root=""
                      data-slot="command"
                      tabindex="-1"
                    >
                      <label
                        cmdk-label=""
                        for="radix-_r_3_"
                        id="radix-_r_2_"
                        style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
                      />
                      <div
                        aria-label="Suggestions"
                        class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
                        cmdk-list=""
                        data-slot="command-list"
                        data-testid="category-options"
                        id="radix-_r_1_"
                        role="listbox"
                        tabindex="-1"
                      >
                        <div
                          cmdk-list-sizer=""
                        >
                          <div
                            class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
                            cmdk-group=""
                            data-slot="command-group"
                            data-value="undefined"
                            role="presentation"
                          >
                            <div
                              cmdk-group-items=""
                              role="group"
                            >
                              <div
                                aria-disabled="false"
                                aria-selected="true"
                                class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative rounded-sm text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 flex items-center gap-3 px-3 py-2.5 cursor-pointer hover:bg-slate-50"
                                cmdk-item=""
                                data-disabled="false"
                                data-selected="true"
                                data-slot="command-item"
                                data-testid="category-option-category-1"
                                data-value="category 1"
                                id="radix-_r_6_"
                                role="option"
                              >
                                <div
                                  class="h-4 w-4 rounded border-2 transition-all flex items-center justify-center border-slate-300"
                                />
                                <span
                                  class="text-sm font-medium text-slate-700"
                                >
                                  category 1
                                </span>
                              </div>
                              <div
                                aria-disabled="false"
                                aria-selected="false"
                                class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative rounded-sm text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 flex items-center gap-3 px-3 py-2.5 cursor-pointer hover:bg-slate-50"
                                cmdk-item=""
                                data-disabled="false"
                                data-selected="false"
                                data-slot="command-item"
                                data-testid="category-option-category-2"
                                data-value="category 2"
                                id="radix-_r_7_"
                                role="option"
                              >
                                <div
                                  class="h-4 w-4 rounded border-2 transition-all flex items-center justify-center border-slate-300"
                                />
                                <span
                                  class="text-sm font-medium text-slate-700"
                                >
                                  category 2
                                </span>
                              </div>
                              <div
                                aria-disabled="false"
                                aria-selected="false"
                                class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative rounded-sm text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 flex items-center gap-3 px-3 py-2.5 cursor-pointer hover:bg-slate-50"
                                cmdk-item=""
                                data-disabled="false"
                                data-selected="false"
                                data-slot="command-item"
                                data-testid="category-option-category-3"
                                data-value="category 3"
                                id="radix-_r_8_"
                                role="option"
                              >
                                <div
                                  class="h-4 w-4 rounded border-2 transition-all flex items-center justify-center border-slate-300"
                                />
                                <span
                                  class="text-sm font-medium text-slate-700"
                                >
                                  category 3
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 px-1 pt-1 overflow-y-auto bg-slate-50/30"
      data-testid="prompts-list-items"
    >
      <div
        class="flex flex-col space-y-1"
      >
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d750"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 0
                  </h3>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-100 transition-all duration-200"
                    data-slot="button"
                    data-testid="toggle-favorite-btn"
                    title="Aus Favoriten entfernen"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
                  >
                    <span
                      class="font-semibold text-slate-600"
                    >
                      v
                    </span>
                  </span>
                  <span
                    class="text-slate-300"
                  >
                    •
                  </span>
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      27. Sept. 2025, 02:00 AM
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d751"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 1
                  </h3>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-100 transition-all duration-200"
                    data-slot="button"
                    data-testid="toggle-favorite-btn"
                    title="Aus Favoriten entfernen"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
                  >
                    <span
                      class="font-semibold text-slate-600"
                    >
                      v
                    </span>
                  </span>
                  <span
                    class="text-slate-300"
                  >
                    •
                  </span>
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      27. Sept. 2025, 02:00 AM
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d752"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 2
                  </h3>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-100 transition-all duration-200"
                    data-slot="button"
                    data-testid="toggle-favorite-btn"
                    title="Aus Favoriten entfernen"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
                  >
                    <span
                      class="font-semibold text-slate-600"
                    >
                      v
                    </span>
                  </span>
                  <span
                    class="text-slate-300"
                  >
                    •
                  </span>
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      27. Sept. 2025, 02:00 AM
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d750"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 0
                  </h3>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-100 transition-all duration-200"
                    data-slot="button"
                    data-testid="toggle-favorite-btn"
                    title="Aus Favoriten entfernen"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
                  >
                    <span
                      class="font-semibold text-slate-600"
                    >
                      v
                    </span>
                  </span>
                  <span
                    class="text-slate-300"
                  >
                    •
                  </span>
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      27. Sept. 2025, 02:00 AM
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d751"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 1
                  </h3>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-100 transition-all duration-200"
                    data-slot="button"
                    data-testid="toggle-favorite-btn"
                    title="Aus Favoriten entfernen"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
                  >
                    <span
                      class="font-semibold text-slate-600"
                    >
                      v
                    </span>
                  </span>
                  <span
                    class="text-slate-300"
                  >
                    •
                  </span>
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      27. Sept. 2025, 02:00 AM
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d752"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 2
                  </h3>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-100 transition-all duration-200"
                    data-slot="button"
                    data-testid="toggle-favorite-btn"
                    title="Aus Favoriten entfernen"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
                  >
                    <span
                      class="font-semibold text-slate-600"
                    >
                      v
                    </span>
                  </span>
                  <span
                    class="text-slate-300"
                  >
                    •
                  </span>
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      27. Sept. 2025, 02:00 AM
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        class="flex justify-center py-6"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle h-6 w-6 animate-spin text-blue-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromptsList rendering tests PromptsList - filters not displayed - rendered test 1`] = `
<div>
  <div
    class="flex flex-col h-full bg-white"
    data-testid="prompts-list"
  >
    <div
      class="px-6 py-4 border-b border-slate-200/80 flex justify-between items-center bg-gradient-to-r from-white to-slate-50/50 sticky top-0 z-10 backdrop-blur-sm"
      data-testid="prompts-list-header"
    >
      <div
        class="flex items-center gap-3"
      >
        <h3
          class="text-base font-bold text-slate-800 tracking-tight"
        >
          Bibliothek
        </h3>
        <span
          class="text-xs font-medium text-slate-600 bg-slate-100 px-2.5 py-1 rounded-full shadow-sm"
        >
          3
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 relative transition-all duration-200 hover:bg-slate-50"
          data-slot="button"
          data-testid="filters-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-funnel w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            Filter
          </span>
        </button>
        <a
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 bg-gradient-to-r from-blue-600 to-blue-700 hover:from-blue-700 hover:to-blue-800 text-white shadow-md hover:shadow-lg transition-all duration-200 flex items-center gap-2"
          data-slot="button"
          data-testid="create-prompt-btn"
          href="/prompts/new"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            Neu
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex-1 px-1 pt-1 overflow-y-auto bg-slate-50/30"
      data-testid="prompts-list-items"
    >
      <div
        class="flex flex-col space-y-1"
      >
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d750"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 0
                  </h3>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-100 transition-all duration-200"
                    data-slot="button"
                    data-testid="toggle-favorite-btn"
                    title="Aus Favoriten entfernen"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
                  >
                    <span
                      class="font-semibold text-slate-600"
                    >
                      v
                    </span>
                  </span>
                  <span
                    class="text-slate-300"
                  >
                    •
                  </span>
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      27. Sept. 2025, 02:00 AM
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d751"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 1
                  </h3>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-100 transition-all duration-200"
                    data-slot="button"
                    data-testid="toggle-favorite-btn"
                    title="Aus Favoriten entfernen"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
                  >
                    <span
                      class="font-semibold text-slate-600"
                    >
                      v
                    </span>
                  </span>
                  <span
                    class="text-slate-300"
                  >
                    •
                  </span>
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      27. Sept. 2025, 02:00 AM
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          data-testid="mock-link"
          href="/prompts/334db648-f300-4284-8149-075ff465d752"
        >
          <div
            class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
            data-testid="prompt-list-item"
          >
            <div
              class="flex items-start gap-3 px-4 py-3.5"
            >
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2 mb-2"
                >
                  <h3
                    class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
                  >
                    title 2
                  </h3>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0 flex-shrink-0 rounded-md hover:bg-slate-100 opacity-100 transition-all duration-200"
                    data-slot="button"
                    data-testid="toggle-favorite-btn"
                    title="Aus Favoriten entfernen"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-star w-4 h-4 transition-all fill-yellow-400 text-yellow-500 scale-110"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="flex flex-wrap gap-1.5 mb-2.5"
                >
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 0
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
                  >
                    category 1
                  </span>
                  <span
                    class="text-xs px-2 py-0.5 text-slate-500 font-medium"
                  >
                    +
                    1
                     mehr
                  </span>
                </div>
                <div
                  class="flex items-center gap-2.5 text-xs text-slate-500"
                >
                  <span
                    class="inline-flex items-center gap-1 px-2 py-0.5 bg-slate-50 rounded-md border border-slate-200/50"
                  >
                    <span
                      class="font-semibold text-slate-600"
                    >
                      v
                    </span>
                  </span>
                  <span
                    class="text-slate-300"
                  >
                    •
                  </span>
                  <span
                    class="inline-flex items-center gap-1.5 truncate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6v6l4 2"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                    <span
                      class="font-medium"
                    >
                      27. Sept. 2025, 02:00 AM
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        class="flex justify-center py-6"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle h-6 w-6 animate-spin text-blue-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
